mgr: wait for mon digest on startup

This is to avoid starting the python modules
before the mon_status and health information
is available.

Fixes: http://tracker.ceph.com/issues/20383
Signed-off-by: John Spray <john.spray@redhat.com>